kubernetes-gatekeeper/constraints/allowed-repositories.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allowed-repositories
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
  parameters:
    repos:
      - "4444444444.dkr.ecr.me-south-1.amazonaws.com"
      - "docker.io/library"
      - "quay.io"
      - "registry.k8s.io"
      - "gcr.io"
